--- a/app.conf
+++ b/app.conf
@@ -1,8 +1,15 @@
 <VirtualHost *:80>
-    ServerName www.virtual.host
-    ServerAdmin webmaster@virtual.host
-    DocumentRoot /home/ubuntu/public_html
-    ErrorLog /var/log/apache2/virtual.host.error.log
-    CustomLog /var/log/apache2/virtual.host.access.log combined
+    ServerName 
+    ServerAdmin
+    DocumentRoot /var/www/html
+    
+    <Directory /var/www/html>
+        Options +FollowSymlinks
+        AllowOverride All
+        Require all granted
+    </Directory>
+
+    ErrorLog ${APACHE_LOG_DIR}/error.log
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
     LogLevel warn
 </VirtualHost>
