--- a/supervisord.conf
+++ b/supervisord.conf
@@ -21,7 +21,8 @@ password=docker
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 
 [program:php-fpm]
-command=/usr/sbin/php-fpm7.0 -F
+# command = /usr/local/sbin/php-fpm # php:7.2-fpm
+command = /usr/sbin/php-fpm7.0 -F
 autostart=true
 autorestart=true
 priority=5
@@ -31,7 +32,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:apache]
-command=/usr/sbin/apache2ctl "-DFOREGROUND";
+command=/usr/sbin/apache2ctl -DFOREGROUND
 autostart=true
 autorestart=true
 priority=10
@@ -42,3 +43,11 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
+# [program:redis]
+# command=redis-server /etc/redis/redis.conf
+# command = /usr/bin/redis-server redis.conf
+# autostart=true
+# autorestart=true
+# user=root
+# stdout_logfile=/var/log/redis/stdout.log
+# stderr_logfile=/var/log/redis/stderr.log
